--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
     h1 {
       color: #333;
     }
+    img {
+      border-radius: 15px;
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
   <h1>欢迎来到我的网站！</h1>
-  <h2>Talent zxp 2025年11月27日 15点53分</h2>
-  <p>这个网站由 VS Code 编辑，通过 GitHub + Cloudflare Pages 部署。</p>
+  <img src="howcanoi.png" alt="png">
+  <h2>zxp<i class="ri-star-smile-line"></i> <p>2025年11月27日 </h2>  
 </body>
 </html>
