--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <h1>欢迎来到我的网站！</h1>
-  <img src="howcanoi.png" alt="png">
+  <img src="image/howcani.png" alt="png">
   <h2>zxp<i class="ri-star-smile-line"></i> <p>2025年11月27日 </h2>  
 </body>
 </html>
