--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>我的网站</title>
+  <title>my web</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>欢迎来到我的网站！</h1>
   <img src="image/howcani.png" alt="png">
-  <h2>zxp<i class="ri-star-smile-line"></i> <p>2025年11月27日 </h2>  
+  <h2>zxp<span class="ri--star-smile-line"></span> <p>2025年11月27日 </h2>  
 </body>
 </html>
