--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
   <h1>欢迎来到我的网站！</h1>
   <img id="main-img" src="image/howcani.png" alt="png">
-  <h2><a href="#" id="zxp-link" style="color: #999; text-decoration: underline; cursor: pointer;">zxp</a> <span style="font-weight:normal;"><p></p>2025年11月27日</span></h2>
+  <h2><a href="#" id="zxp-link" style="color: #999; text-decoration: underline; cursor: pointer;">zxp</a> <span style="font-weight:normal;"></span></h2>
+    <div style="font-size:12px;color:#bbb;margin-bottom:20px;">
+      <a href="#" id="log-link" style="color:#bbb;text-decoration:underline;">2025-11-29：图片自适应优化，添加右侧导航栏，zxp下方增加更新说明。</a>
+    </div>
+    <script>
+      document.getElementById('log-link').onclick = function(e) {
+        e.preventDefault();
+        window.location.href = 'log/update.log';
+      };
+    </script>
   <script>
     document.getElementById('zxp-link').onclick = function(e) {
       e.preventDefault();
@@ -17,4 +26,17 @@
     };
   </script>
 </body>
+</body>
+<div class="sidebar">
+  <h3>导航</h3>
+  <ul>
+    <li><a href="index.html">首页</a></li>
+    <li><a href="categories.html">文章分类</a></li>
+    <li><a href="archive.html">归档</a></li>
+    <li><a href="tags.html">标签</a></li>
+    <li><a href="about.html">关于我</a></li>
+    <li><a href="guestbook.html">留言板</a></li>
+    <li><a href="changelog.html">更新日志</a></li>
+  </ul>
+</div>
 </html>
