--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
 </head>
 <body>
   <h1>欢迎来到我的网站！</h1>
-  <img id="main-img" src="image/howcani.png" alt="png">
+  <img id="main-img" src="image/howcani.png" alt="png" style="cursor:pointer;">
   <h2><a href="#" id="zxp-link" style="color: #999; text-decoration: underline; cursor: pointer;">zxp</a> <span style="font-weight:normal;"></span></h2>
     <div style="font-size:12px;color:#bbb;margin-bottom:20px;">
       <a href="#" id="log-link" style="color:#bbb;text-decoration:underline;">2025-11-29：图片自适应优化，添加右侧导航栏，zxp下方增加更新说明。</a>
     </div>
     <script>
+      // 日志跳转
       document.getElementById('log-link').onclick = function(e) {
         e.preventDefault();
         window.location.href = 'log/update.log';
       };
+      // zxp切换图片
+      document.getElementById('zxp-link').onclick = function(e) {
+        e.preventDefault();
+        document.getElementById('main-img').src = 'image/smilebro.png';
+      };
+      // 随机图片切换
+      const imgList = ['howcani.png', 'smilebro.png'];
+      document.getElementById('main-img').onclick = function() {
+        let current = this.src.split('/').pop();
+        let pool = imgList.filter(f => f !== current);
+        let next = pool[Math.floor(Math.random()*pool.length)] || imgList[0];
+        this.src = 'image/' + next;
+      };
     </script>
-  <script>
-    document.getElementById('zxp-link').onclick = function(e) {
-      e.preventDefault();
-      document.getElementById('main-img').src = 'image/smilebro.png';
-    };
-  </script>
 </body>
 </body>
 <div class="sidebar">
@@ -37,6 +45,7 @@
     <li><a href="about.html">关于我</a></li>
     <li><a href="guestbook.html">留言板</a></li>
     <li><a href="changelog.html">更新日志</a></li>
+    <li><a href="research-log.html">科研日志</a></li>
   </ul>
 </div>
 </html>
